src/objects/ZIP_Code__c.object
<CustomObject>
    <description>Represent a ZIP code</description>
    <fields>
        <fullName>Area_Code__c</fullName>
        <description>Phone area code</description>
        <inlineHelpText>Phone area code</inlineHelpText>
        <label>Area Code</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City</description>
        <inlineHelpText>City</inlineHelpText>
        <label>City</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <description>2 letter country code base ISO standard</description>
        <inlineHelpText>Enter two letter country code ISO standard</inlineHelpText>
        <label>Country Code</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Full name of a country</description>
        <inlineHelpText>Enter full name of a country. Example: United States</inlineHelpText>
        <label>Country</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <description>The County name for US addresses</description>
        <inlineHelpText>The County name for US addresses</inlineHelpText>
        <label>County</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIPS__c</fullName>
        <description>FIPS 10-4 Region Code</description>
        <inlineHelpText>FIPS 10-4 Region Code</inlineHelpText>
        <label>FIPS</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <description>Latitude coordinate of a zip code</description>
        <inlineHelpText>Latitude coordinate of a zip code</inlineHelpText>
        <label>Latitude</label>
        <precision>10</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <description>Longitude coordinate of a zip code</description>
        <inlineHelpText>Longitude coordinate of a zip code</inlineHelpText>
        <label>Longitude</label>
        <precision>10</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Territory Region name</description>
        <inlineHelpText>Territory Region name</inlineHelpText>
        <label>Region</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Code__c</fullName>
        <description>Abbreviation of State name</description>
        <inlineHelpText>Enter Abbreviation of the State name.  Example: CA for California</inlineHelpText>
        <label>State Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Full name of a state or province</description>
        <inlineHelpText>Enter full name of State of Province</inlineHelpText>
        <label>State</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Zone_Text__c</fullName>
        <description>Time zone in text</description>
        <label>Time Zone</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <description>Time zone denomination relative to GMT</description>
        <inlineHelpText>Time zone denomination relative to GMT</inlineHelpText>
        <label>Time Zone</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of ZIP code</description>
        <inlineHelpText>Type of ZIP code</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Military</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PO Box Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unique</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>ZIP Code</label>
    <nameField>
        <label>ZIP Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZIP Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>